Fixed overflows

--- a/src/app/id3-hallway/id3-hallway.component.css
+++ b/src/app/id3-hallway/id3-hallway.component.css
@@ -1,3 +1,8 @@
+/* components are inline by default, turn into block for animations */
+/* :host {
+ display: block;
+} */
+
 .body {
   width: 100vw;
   height: 100vh;
@@ -54,43 +59,39 @@
   }
 }
 
-.char {
-  height: 80%;
-  /* width: 2%; */
-  position: absolute;
-}
-
-
-/* 
-.mainCharacter {
-  top: 18%;
-  left: 30%;
-  width: 60%;
-  
-} */
-.characterParts {
-  top: 10%;
-  left: 30%;
-  position: absolute;
-  height: 100%;
-  width: 20%;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain    ;
-  z-index: 10;
-}
-
-
 .friend {
+  height: 80%;
+  position: absolute;
   top: 15%;
   left: 75%;
 }
 
 img {
-  height: auto;
-  /* width: 100%; */
   height: 100%;
 }
+
+.mainCharacter {
+  height: 80%;
+  width: 20%;
+  position: absolute;
+  top: 15%;
+  left: 25%;
+
+}
+.characterParts {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain   ;
+  z-index: 10;
+}
+
+
+
+
+
 
 /* determines the property for the animations */
 .animate {
@@ -166,17 +167,6 @@ img {
       font-size: 2rem;
   }
 
-  .characterParts {
-    top: 5%;
-    left: 25%;
-    position: absolute;
-    height: 100%;
-    width: 22%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain    ;
-    z-index: 10;
-  }
 
 .dialogue p {
   padding: 10%;
