--- a/src/app/id6-gym/id6-gym.component.css
+++ b/src/app/id6-gym/id6-gym.component.css
@@ -89,7 +89,7 @@ html{
     top: 10%;
     left: 65%;
     position: absolute;
-    height: 100%;
+    height: 80%;
     width: 20%;
     background-repeat: no-repeat;
     background-position: center;
